--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
+	Dana The Analyst
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -54,7 +54,7 @@
 									
 									<h2><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>In this project I cleaned housing data in SQL Server .</p>
+									<p>In this project, I cleaned housing data in SQL Server.</p>
 								</header>
 								<a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="image main"><img src="images/pexels-pixabay-164338.jpg" alt="" /></a>
 								<ul class="actions special">
