--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Dana The Analyst Portfolio <br />
 						</h1>
-						<p>Data Analyst skilled in SQL, Tableau, and Python <a href="https://github.com/danartech">@danartech</a> 
+						<p>Data Analyst skilled in Excel, SQL, Tableau, Python and R. <a href="https://github.com/danartech">@danartech</a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
