--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									
 									<h2><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>In this project, I cleaned housing data in SQL Server.</p>
+									<p>In this project, I cleaned housing data in MySQL.</p>
 								</header>
 								<a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="image main"><img src="images/pexels-pixabay-164338.jpg" alt="" /></a>
 								<ul class="actions special">
