--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									
 									<h2><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>In this project, I cleaned housing data in MySQL.</p>
+									<p>In this project, I cleaned housing data in MySQL Server.</p>
 								</header>
 								<a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="image main"><img src="images/pexels-pixabay-164338.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -70,7 +70,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main" class="image fit"><img src="images/Microbes-1-800x450.jpg" alt="" /></a>
-									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
+									<p>Data Exploration of Covid 19 Dataset in MySQL Server.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main" class="button">View Project</a></li>
 									</ul>
