--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Dana The Analyst Portfolio <br />
 						</h1>
-						<p>Data Analyst skilled in Excel, SQL, Tableau, Python and R. <a href="https://github.com/danartech">@danartech</a> 
+						<p>Data Analyst skilled in Excel, SQL, Tableau, and Python. <a href="https://github.com/danartech">@danartech</a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -88,11 +88,11 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Python & R Projects<br />
+										<h2><a href="#">Python Projects<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="" /></a>
-									<p>View all of my Python & R Projects.</p>
+									<p>View all of my Python Projects.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Projects</a></li>
 									</ul>
