--- a/index.html
+++ b/index.html
@@ -1,143 +1,151 @@
 <!DOCTYPE HTML>
 <!--
-	Dana The Analyst
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Dana The Analyst
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Dana The Analyst</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+    <title>Dana The Analyst</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+        .centered-section {
+            text-align: center;
+        }
+    </style>
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+    <!-- Wrapper -->
+    <div id="wrapper" class="fade-in">
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Dana The Analyst Portfolio <br />
-						</h1>
-						<p>Data Analyst skilled in Excel, SQL, Tableau, and Python. <a href="https://github.com/danartech">@danartech</a> 
-						</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+        <!-- Intro -->
+        <div id="intro">
+            <h1>Dana The Analyst Portfolio <br />
+            </h1>
+            <p>Data Analyst skilled in Excel, SQL, Tableau, and Python. <a href="https://github.com/danartech">@danartech</a></p>
+            <ul class="actions">
+                <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+            </ul>
+        </div>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Dana The Analyst</a>
-					</header>
+        <!-- Header -->
+        <header id="header">
+            <a href="index.html" class="logo">Dana The Analyst</a>
+        </header>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
+        <!-- Nav -->
+        <nav id="nav">
+            <ul class="links">
+                <li class="active"><a href="index.html">Projects</a></li>
+            </ul>
+            <ul class="icons">
+                <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            </ul>
+        </nav>
 
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
+        <!-- Main -->
+        <div id="main">
 
-				<!-- Main -->
-					<div id="main">
+            <!-- Featured Post -->
+            <article class="post featured">
+                <header class="major">
+                    <h2><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql">Data Cleaning in SQL</a></h2>
+                    <p>Cleaned housing data using MySQL Server to ensure data accuracy and integrity.</p>
+                </header>
+                <a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="image main"><img src="images/pexels-pixabay-164338.jpg" alt="Data Cleaning" /></a>
+                <ul class="actions special">
+                    <li><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="button large">View Project</a></li>
+                </ul>
+            </article>
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									
-									<h2><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql">Data Cleaning in SQL<br />
-									</a></h2>
-									<p>In this project, I cleaned housing data in MySQL Server.</p>
-								</header>
-								<a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="image main"><img src="images/pexels-pixabay-164338.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="button large">View Project</a></li>
-								</ul>
-							</article>
+            <!-- Posts -->
+            <section class="posts">
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main">Data Exploration in SQL</a></h2>
+                    </header>
+                    <a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main" class="image fit"><img src="images/Microbes-1-800x450.jpg" alt="Data Exploration" /></a>
+                    <p>Conducted a comprehensive data exploration of COVID-19 dataset using MySQL Server.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main" class="button">View Project</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header>
+                        <h2><a href="https://public.tableau.com/app/profile/dana.robinson">Tableau Projects</a></h2>
+                    </header>
+                    <a href="https://public.tableau.com/app/profile/dana.robinson" class="image fit"><img src="images/41425693524_d73d3db449_w.jpg" alt="Tableau Projects" /></a>
+                    <p>Explore various dashboards and visualizations created using Tableau.</p>
+                    <ul class="actions special">
+                        <li><a href="https://public.tableau.com/app/profile/dana.robinson" class="button">View Projects</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header>
+                        <h2><a href="#">Python Projects</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="Python Projects" /></a>
+                    <p>Discover my Python projects showcasing data analysis and automation skills.</p>
+                    <ul class="actions special">
+                        <li><a href="#" class="button">View Projects</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header>
+                        <h2><a href="#">Power BI Projects</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="images/powerbi.jpg" alt="Power BI Projects" /></a>
+                    <p>Interactive data visualizations and dashboards created using Power BI.</p>
+                    <ul class="actions special">
+                        <li><a href="#" class="button">View Projects</a></li>
+                    </ul>
+                </article>
+            </section>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main">Data Exploration in SQL<br />
-										</a></h2>
-									</header>
-									<a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main" class="image fit"><img src="images/Microbes-1-800x450.jpg" alt="" /></a>
-									<p>Data Exploration of Covid 19 Dataset in MySQL Server.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/danartech/Portfolio-Project-EDA/tree/main" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://public.tableau.com/app/profile/dana.robinson">Tableau Projects<br />
-										</a></h2>
-									</header>
-									<a href="https://public.tableau.com/app/profile/dana.robinson" class="image fit"><img src="images/41425693524_d73d3db449_w.jpg" alt="" /></a>
-									<p>View all of my Tableau Projects and Dashboards.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/dana.robinson" class="button">View Projects</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Python Projects<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="" /></a>
-									<p>View all of my Python Projects.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Projects</a></li>
-									</ul>
-								</article>
-								<article>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Location</h3>
-								<p><br />
-								Aurora, CO 80017</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(720) 982-1564</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">danarfintech@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									
-									<li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-									<li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
+            <!-- Contact -->
+            <section class="split contact">
+                <section class="centered-section">
+                    <h3>Location</h3>
+                    <p>Aurora, CO 80017</p>
+                </section>
+                <section class="centered-section">
+                    <h3>Phone</h3>
+                    <p><a href="tel:+17209821564">(720) 982-1564</a></p>
+                </section>
+                <section class="centered-section">
+                    <h3>Email</h3>
+                    <p><a href="mailto:danarfintech@gmail.com">danarfintech@gmail.com</a></p>
+                </section>
+                <section class="centered-section">
+                    <h3>Social</h3>
+                    <ul class="icons alt">
+                        <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                    </ul>
+                </section>
+            </section>
+        </div>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+        <!-- Copyright -->
+        <div id="copyright">
+            <ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+        </div>
 
-			</div>
+    </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 
-	</body>
+</body>
 </html>
