--- a/index.html
+++ b/index.html
@@ -97,31 +97,31 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="#">Power BI Projects</a></h2>
+                        <h2><a href="https://github.com/danartech/Power-BI-Project">Power BI Projects</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="images/powerbi.jpg" alt="Power BI Projects" /></a>
+                    <a href="https://github.com/danartech/Power-BI-Project" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/download.png?raw=true" alt="Power BI Projects" /></a>
                     <p>Interactive data visualizations and dashboards created using Power BI.</p>
                     <ul class="actions special">
-                        <li><a href="#" class="button">View Projects</a></li>
+                        <li><a href="https://github.com/danartech/Power-BI-Project" class="button">View Projects</a></li>
                     </ul>
                 </article>
             </section>
 
             <!-- Contact -->
-            <section class="split contact">
-                <section class="centered-section">
+            <section class="split contact centered-section">
+                <section>
                     <h3>Location</h3>
                     <p>Aurora, CO 80017</p>
                 </section>
-                <section class="centered-section">
+                <section>
                     <h3>Phone</h3>
                     <p><a href="tel:+17209821564">(720) 982-1564</a></p>
                 </section>
-                <section class="centered-section">
+                <section>
                     <h3>Email</h3>
                     <p><a href="mailto:danarfintech@gmail.com">danarfintech@gmail.com</a></p>
                 </section>
-                <section class="centered-section">
+                <section>
                     <h3>Social</h3>
                     <ul class="icons alt">
                         <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
