--- a/index.html
+++ b/index.html
@@ -12,8 +12,26 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <style>
-        .centered-section {
-            text-align: center;
+        .contact-box {
+            border: 1px solid #ddd;
+            padding: 20px;
+            margin: 20px 0;
+            background: #f9f9f9;
+        }
+        .contact-box h3 {
+            margin-bottom: 10px;
+        }
+        .contact-box p {
+            margin: 5px 0;
+        }
+        @media only screen and (max-width: 600px) {
+            #intro {
+                padding-top: 20px;
+            }
+            .contact-box {
+                padding: 10px;
+                margin: 10px 0;
+            }
         }
     </style>
 </head>
@@ -26,7 +44,7 @@
         <div id="intro">
             <h1>Dana The Analyst Portfolio <br />
             </h1>
-            <p>Data Analyst skilled in Excel, SQL, Tableau, and Python. <a href="https://github.com/danartech">@danartech</a></p>
+            <p>Data Analyst skilled in Excel, SQL, Tableau, Python, Cloud Technologies, and Cybersecurity. <a href="https://github.com/danartech">@danartech</a></p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
             </ul>
@@ -108,44 +126,52 @@
             </section>
 
             <!-- Contact -->
-            <section class="split contact centered-section">
-                <section>
-                    <h3>Location</h3>
-                    <p>Aurora, CO 80017</p>
-                </section>
-                <section>
-                    <h3>Phone</h3>
-                    <p><a href="tel:+17209821564">(720) 982-1564</a></p>
-                </section>
-                <section>
-                    <h3>Email</h3>
-                    <p><a href="mailto:danarfintech@gmail.com">danarfintech@gmail.com</a></p>
-                </section>
-                <section>
-                    <h3>Social</h3>
-                    <ul class="icons alt">
-                        <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                        <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                    </ul>
-                </section>
+            <section class="contact-box">
+                <h3>Location</h3>
+                <p>Aurora, CO 80017</p>
+                <h3>Phone</h3>
+                <p><a href="tel:+17209821564">(720) 982-1564</a></p>
+                <h3>Email</h3>
+                <p><a href="mailto:danarfintech@gmail.com">danarfintech@gmail.com</a></p>
+                <h3>Social</h3>
+                <ul class="icons alt">
+                    <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                </ul>
             </section>
         </div>
 
+        <!-- Skills -->
+        <section class="contact-box">
+            <h3>Skills</h3>
+            <ul>
+                <li>Excel</li>
+                <li>SQL</li>
+                <li>Tableau</li>
+                <li>Python</li>
+                <li>Cloud Technologies</li>
+                <li>Cybersecurity</li>
+                <li>Data Cleaning</li>
+                <li>Data Exploration</li>
+                <li>Interactive Dashboards</li>
+            </ul>
+        </section>
+
+        <!-- Certifications -->
+        <section class="contact-box">
+            <h3>Certifications</h3>
+            <ul>
+                <li>CompTIA Security+</li>
+                <li>AZ-500: Microsoft Azure Security Technologies</li>
+                <li>Google IT Support Professional Certificate</li>
+                <li>Google Cybersecurity Professional Certificate</li>
+                <li>CompTIA A+</li>
+                <li>CompTIA Network+</li>
+                <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
+                <li>AWS Certified Cloud Practitioner</li>
+            </ul>
+        </section>
+
         <!-- Copyright -->
         <div id="copyright">
-            <ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-        </div>
-
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-
-</body>
-</html>
+            <ul><li>&copy; Untitled</li><li>Design: <a href
