--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
         .contact-box p {
             margin: 5px 0;
         }
-        @media only screen and (max-width: 600px) {
-            #intro {
-                padding-top: 20px;
-            }
-            .contact-box {
-                padding: 10px;
-                margin: 10px 0;
-            }
-        }
     </style>
 </head>
 <body class="is-preload">
@@ -44,7 +35,7 @@
         <div id="intro">
             <h1>Dana The Analyst Portfolio <br />
             </h1>
-            <p>Data Analyst skilled in Excel, SQL, Tableau, Python, Cloud Technologies, and Cybersecurity. <a href="https://github.com/danartech">@danartech</a></p>
+            <p>Data Analyst skilled in Excel, SQL, Tableau, and Python. <a href="https://github.com/danartech">@danartech</a></p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
             </ul>
@@ -139,39 +130,16 @@
                     <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
                 </ul>
             </section>
-        </div>
+    </div>
 
-        <!-- Skills -->
-        <section class="contact-box">
-            <h3>Skills</h3>
-            <ul>
-                <li>Excel</li>
-                <li>SQL</li>
-                <li>Tableau</li>
-                <li>Python</li>
-                <li>Cloud Technologies</li>
-                <li>Cybersecurity</li>
-                <li>Data Cleaning</li>
-                <li>Data Exploration</li>
-                <li>Interactive Dashboards</li>
-            </ul>
-        </section>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 
-        <!-- Certifications -->
-        <section class="contact-box">
-            <h3>Certifications</h3>
-            <ul>
-                <li>CompTIA Security+</li>
-                <li>AZ-500: Microsoft Azure Security Technologies</li>
-                <li>Google IT Support Professional Certificate</li>
-                <li>Google Cybersecurity Professional Certificate</li>
-                <li>CompTIA A+</li>
-                <li>CompTIA Network+</li>
-                <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
-                <li>AWS Certified Cloud Practitioner</li>
-            </ul>
-        </section>
-
-        <!-- Copyright -->
-        <div id="copyright">
-            <ul><li>&copy; Untitled</li><li>Design: <a href
+</body>
+</html>
