--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <!-- Intro -->
         <div id="intro">
-            <h1>Dana The Analyst Portfolio <br />
+            <h1>Dana Robinson's Portfolio <br />
             </h1>
-            <p>Data Analyst skilled in Excel, SQL, Tableau, and Python. <a href="https://github.com/danartech">@danartech</a></p>
+            <p>Data Analyst skilled in Excel, SQL, Tableau, Python, Cloud Technologies, and Cybersecurity. <a href="https://github.com/danartech">@danartech</a></p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
             </ul>
@@ -43,7 +43,7 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo">Dana The Analyst</a>
+            <a href="index.html" class="logo">Dana's Tech Portfolio</a>
         </header>
 
         <!-- Nav -->
@@ -131,7 +131,37 @@
                 </ul>
             </section>
     </div>
+ <!-- Skills -->
+        <section class="contact-box">
+            <h3>Skills</h3>
+            <ul>
+                <li>Excel</li>
+                <li>SQL</li>
+                <li>Tableau</li>
+                <li>Python</li>
+                <li>Cloud Technologies</li>
+                <li>Cybersecurity</li>
+                <li>Data Cleaning</li>
+                <li>Data Exploration</li>
+                <li>Interactive Dashboards</li>
+            </ul>
+        </section>
 
+        <!-- Certifications -->
+        <section class="contact-box">
+            <h3>Certifications</h3>
+            <ul>
+                <li>CompTIA Security+</li>
+                <li>AZ-500: Microsoft Azure Security Technologies</li>
+                <li>Google IT Support Professional Certificate</li>
+                <li>Google Cybersecurity Professional Certificate</li>
+                <li>CompTIA A+</li>
+                <li>CompTIA Network+</li>
+                <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
+                <li>AWS Certified Cloud Practitioner</li>
+            </ul>
+        </section>
+        
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
