--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <title>Dana The Analyst</title>
     <meta charset="utf-8" />
-    <meta name="Dana The Analyst" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <style>
@@ -24,6 +24,22 @@
         .contact-box p {
             margin: 5px 0;
         }
+        .skills-certifications ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .skills-certifications li {
+            margin: 5px 0;
+        }
+        @media only screen and (max-width: 600px) {
+            #intro {
+                padding-top: 20px;
+            }
+            .contact-box {
+                padding: 10px;
+                margin: 10px 0;
+            }
+        }
     </style>
 </head>
 <body class="is-preload">
@@ -33,7 +49,7 @@
 
         <!-- Intro -->
         <div id="intro">
-            <h1>Dana Robinson's Portfolio <br />
+            <h1>Dana The Analyst Portfolio <br />
             </h1>
             <p>Data Analyst skilled in Excel, SQL, Tableau, Python, Cloud Technologies, and Cybersecurity. <a href="https://github.com/danartech">@danartech</a></p>
             <ul class="actions">
@@ -43,13 +59,15 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo">Dana's Tech Portfolio</a>
+            <a href="index.html" class="logo">Dana The Analyst</a>
         </header>
 
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
                 <li class="active"><a href="index.html">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#certifications">Certifications</a></li>
             </ul>
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -116,6 +134,37 @@
                 </article>
             </section>
 
+            <!-- Skills -->
+            <section id="skills" class="skills-certifications">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Excel</li>
+                    <li>SQL</li>
+                    <li>Tableau</li>
+                    <li>Python</li>
+                    <li>Cloud Technologies</li>
+                    <li>Cybersecurity</li>
+                    <li>Data Cleaning</li>
+                    <li>Data Exploration</li>
+                    <li>Interactive Dashboards</li>
+                </ul>
+            </section>
+
+            <!-- Certifications -->
+            <section id="certifications" class="skills-certifications">
+                <h2>Certifications</h2>
+                <ul>
+                    <li>CompTIA Security+</li>
+                    <li>AZ-500: Microsoft Azure Security Technologies</li>
+                    <li>Google IT Support Professional Certificate</li>
+                    <li>Google Cybersecurity Professional Certificate</li>
+                    <li>CompTIA A+</li>
+                    <li>CompTIA Network+</li>
+                    <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
+                    <li>AWS Certified Cloud Practitioner</li>
+                </ul>
+            </section>
+
             <!-- Contact -->
             <section class="contact-box">
                 <h3>Location</h3>
@@ -130,38 +179,15 @@
                     <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
                 </ul>
             </section>
-    </div>
- <!-- Skills -->
-        <section class="contact-box">
-            <h3>Skills</h3>
-            <ul>
-                <li>Excel</li>
-                <li>SQL</li>
-                <li>Tableau</li>
-                <li>Python</li>
-                <li>Cloud Technologies</li>
-                <li>Cybersecurity</li>
-                <li>Data Cleaning</li>
-                <li>Data Exploration</li>
-                <li>Interactive Dashboards</li>
-            </ul>
-        </section>
+        </div>
 
-        <!-- Certifications -->
-        <section class="contact-box">
-            <h3>Certifications</h3>
-            <ul>
-                <li>CompTIA Security+</li>
-                <li>AZ-500: Microsoft Azure Security Technologies</li>
-                <li>Google IT Support Professional Certificate</li>
-                <li>Google Cybersecurity Professional Certificate</li>
-                <li>CompTIA A+</li>
-                <li>CompTIA Network+</li>
-                <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
-                <li>AWS Certified Cloud Practitioner</li>
-            </ul>
-        </section>
-        
+        <!-- Copyright -->
+        <div id="copyright">
+            <ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+        </div>
+
+    </div>
+
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
