--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-    Dana The Analyst
+    Dana Robinson's Portfolio
     html5up.net | @ajlkn
     Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -8,7 +8,7 @@
 <head>
     <title>Dana Robinson</title>
     <meta charset="utf-8" />
-    <meta name="Dana Robinson" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <style>
@@ -70,10 +70,9 @@
 
         <!-- Intro -->
         <div id="intro">
-            <h1>Dana Robinson's Portfolio <br />
-            </h1>
-            <p>Data Analyst skilled in Excel, SQL, Tableau, Python, Cloud Technologies, and Cybersecurity. 
-                <a href="https://github.com/danartech">@danartech</a></p>
+            <h1>Dana Robinson's Portfolio <br /></h1>
+            <p>Data Analyst skilled in Excel, SQL, Tableau, Python, Cloud Technologies, and Cybersecurity.<br>
+            <a href="https://github.com/danartech">@danartech</a></p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
             </ul>
@@ -158,20 +157,6 @@
             <!-- Skills and Certifications -->
             <section id="skills-certifications-container" class="skills-certifications-container">
                 <div class="skills-certifications">
-                    <h2>Skills</h2>
-                    <ul>
-                        <li>Excel</li>
-                        <li>SQL</li>
-                        <li>Tableau</li>
-                        <li>Python</li>
-                        <li>Cloud Technologies</li>
-                        <li>Cybersecurity</li>
-                        <li>Data Cleaning</li>
-                        <li>Data Exploration</li>
-                        <li>Interactive Dashboards</li>
-                    </ul>
-                </div>
-                <div class="skills-certifications">
                     <h2>Certifications</h2>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/9YtURZR.png" alt="CompTIA Security+">
@@ -244,6 +229,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="skills-certifications">
+                    <h2>Skills</h2>
+                    <ul>
+                        <li>Excel</li>
+                        <li>SQL</li>
+                        <li>Tableau</li>
+                        <li>Python</li>
+                        <li>Cloud Technologies</li>
+                        <li>Cybersecurity</li>
+                        <li>Data Cleaning</li>
+                        <li>Data Exploration</li>
+                        <li>Interactive Dashboards</li>
+                    </ul>
+                </div>
             </section>
 
             <!-- Contact -->
@@ -264,7 +263,7 @@
 
         <!-- Copyright -->
         <div id="copyright">
-            <ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+            <ul><li>&copy; <a href="https://github.com/danartech">danartech on GitHub</a></li></ul>
         </div>
 
     </div>
