--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
 
         <!-- Copyright -->
-        <div id="copyright">
+        <div id="@danartech">
             <ul><li>&copy; <a href="https://github.com/danartech">danartech on GitHub</a></li></ul>
         </div>
 
