--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Intro -->
         <div id="intro">
             <h1>Dana Robinson's Portfolio <br /></h1>
-            <p>Data Analyst skilled in Excel, SQL, Tableau, Python, Cloud Technologies, and Cybersecurity.<br>
+            <p>Data Analyst skilled in Excel, SQL, Tableau, Poer BI, Python, Cloud Technologies, and Cybersecurity.<br>
             <a href="https://github.com/danartech">@danartech</a></p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
