--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Intro -->
         <div id="intro">
             <h1>Dana Robinson's Portfolio <br /></h1>
-            <p>Data Analyst skilled in Excel, SQL, Tableau, Poer BI, Python, Cloud Technologies, and Cybersecurity.<br>
+            <p>Data Analyst skilled in Excel, SQL, Tableau, Power BI, Python, Cloud Technologies, and Cybersecurity.<br>
             <a href="https://github.com/danartech">@danartech</a></p>
             <ul class="actions">
                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -146,7 +146,7 @@
                     <header>
                         <h2><a href="https://github.com/danartech/Power-BI-Project">Power BI Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/Power-BI-Project" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/download.png?raw=true" alt="Power BI Projects" /></a>
+                    <a href="https://github.com/danartech/Power-BI-Project" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/power-bi-vector-logo-2022.png?raw=true" alt="Power BI Projects" /></a>
                     <p>Interactive data visualizations and dashboards created using Power BI.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/Power-BI-Project" class="button">View Projects</a></li>
