--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
                     <div class="certification-item">
                         <img src="https://i.imgur.com/9YtURZR.png" alt="CompTIA Security+">
                         <div>
-                            <h3>🔐 CompTIA Security+ ce Certification</h3>
-                            <a href="https://www.credly.com/badges/ab411b1b-2f15-4161-8340-78d1071d077c/public_url">CompTIA Security+ ce Certification</a>
+                            <h3>🔐 CompTIA Security+</h3>
+                            <a href="https://www.credly.com/badges/ab411b1b-2f15-4161-8340-78d1071d077c/public_url">CompTIA Security+</a>
                         </div>
                     </div>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/KQNAdOm.png" alt="CompTIA Network+">
                         <div>
-                            <h3>🌐 CompTIA Network+ ce Certification</h3>
-                            <a href="https://www.credly.com/badges/e49b2a76-d09c-4e72-8f7f-4839f9d6bc8f/public_url">CompTIA Network+ ce Certification</a>
+                            <h3>🌐 CompTIA Network+</h3>
+                            <a href="https://www.credly.com/badges/e49b2a76-d09c-4e72-8f7f-4839f9d6bc8f/public_url">CompTIA Network+</a>
                         </div>
                     </div>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/a1N480G.png" alt="CompTIA A+">
                         <div>
-                            <h3>💻 CompTIA A+ ce Certification</h3>
-                            <a href="https://www.credly.com/badges/d273c5b6-a92a-481b-9bfc-fdd1a81cbdc9/public_url">CompTIA A+ ce Certification</a>
+                            <h3>💻 CompTIA A+</h3>
+                            <a href="https://www.credly.com/badges/d273c5b6-a92a-481b-9bfc-fdd1a81cbdc9/public_url">CompTIA A+</a>
                         </div>
                     </div>
                     <div class="certification-item">
@@ -196,8 +196,8 @@
                     <div class="certification-item">
                         <img src="https://i.imgur.com/lctxOq1.png" alt="Google Data Analytics">
                         <div>
-                            <h3>📊 Google Data Analytics Professional Certificate</h3>
-                            <a href="https://coursera.org/share/4ed75de36411d7d5c0389e2d61a2c2ff">Google Data Analytics Professional Certificate</a>
+                            <h3>📊 Google Data Analytics Certificate</h3>
+                            <a href="https://coursera.org/share/4ed75de36411d7d5c0389e2d61a2c2ff">Google Data Analytics Certificate</a>
                         </div>
                     </div>
                     <div class="certification-item">
@@ -208,10 +208,10 @@
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/t7zm1cY.png" alt="Google IT Support Professional Certificate">
+                        <img src="https://i.imgur.com/t7zm1cY.png" alt="Google IT Support Certificate">
                         <div>
-                            <h3>🛠️ Google IT Support Professional Certificate</h3>
-                            <a href="https://www.credly.com/badges/7f5c8e1d-7c71-4b53-94a1-8440218cfb97/public_url">Google IT Support Professional Certificate</a>
+                            <h3>🛠️ Google IT Support Certificate</h3>
+                            <a href="https://www.credly.com/badges/7f5c8e1d-7c71-4b53-94a1-8440218cfb97/public_url">Google IT Support Certificate</a>
                         </div>
                     </div>
                     <div class="certification-item">
