--- a/index.html
+++ b/index.html
@@ -182,42 +182,42 @@
                     <div class="certification-item">
                         <img src="https://i.imgur.com/GsL3t5t.png" alt="AWS Certified Cloud Practitioner">
                         <div>
-                            <h3>☁️ AWS Certified Cloud Practitioner</h3>
+                            <h3>☁️ AWS Cloud Practitioner</h3>
                             <a href="https://www.credly.com/badges/0d41c123-b789-4582-9d4e-fd317f2bbb2e/public_url">AWS Certified Cloud Practitioner</a>
                         </div>
                     </div>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/hOW7rTQ.png" alt="Microsoft Certified: Azure Fundamentals">
                         <div>
-                            <h3>📘 Microsoft Certified: Azure Fundamentals</h3>
+                            <h3>📘 AZ-900: Azure Fundamentals</h3>
                             <a href="https://learn.microsoft.com/api/credentials/share/en-us/DanaRobinson-5540/ADC24F83CC636771?sharingId=D08918252DFABD21">Microsoft Certified: Azure Fundamentals</a>
                         </div>
                     </div>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/lctxOq1.png" alt="Google Data Analytics">
                         <div>
-                            <h3>📊 Google Data Analytics Certificate</h3>
+                            <h3>📊 Google Data Analytics</h3>
                             <a href="https://coursera.org/share/4ed75de36411d7d5c0389e2d61a2c2ff">Google Data Analytics Certificate</a>
                         </div>
                     </div>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/FAkm4Zi.png" alt="Google Cybersecurity Certificate">
                         <div>
-                            <h3>🔒 Google Cybersecurity Certificate</h3>
+                            <h3>🔒 Google Cybersecurity</h3>
                             <a href="https://www.credly.com/badges/68cc3a44-5686-42d8-8745-81de1fc071e1/public_url">Google Cybersecurity Certificate</a>
                         </div>
                     </div>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/t7zm1cY.png" alt="Google IT Support Certificate">
                         <div>
-                            <h3>🛠️ Google IT Support Certificate</h3>
+                            <h3>🛠️ Google IT Support</h3>
                             <a href="https://www.credly.com/badges/7f5c8e1d-7c71-4b53-94a1-8440218cfb97/public_url">Google IT Support Certificate</a>
                         </div>
                     </div>
                     <div class="certification-item">
                         <img src="https://i.imgur.com/xiEJ7PF.png" alt="Python for Data Science and AI">
                         <div>
-                            <h3>🐍 Python for Data Science and AI</h3>
+                            <h3>🐍 Python for Data Science & AI</h3>
                             <a href="https://www.credly.com/badges/4f0fcef8-75d4-4114-9ccc-20a10d21f494/public_url">Python for Data Science and AI</a>
                         </div>
                     </div>
