--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="certification-item">
                         <img src="https://i.imgur.com/hOW7rTQ.png" alt="Microsoft Certified: Azure Fundamentals">
                         <div>
-                            <h3>📘 AZ-900: Azure Fundamentals</h3>
+                            <h3>📘 Azure Fundamentals</h3>
                             <a href="https://learn.microsoft.com/api/credentials/share/en-us/DanaRobinson-5540/ADC24F83CC636771?sharingId=D08918252DFABD21">Microsoft Certified: Azure Fundamentals</a>
                         </div>
                     </div>
