--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <div class="certification-item">
                         <img src="https://i.imgur.com/xiEJ7PF.png" alt="Python for Data Science and AI">
                         <div>
-                            <h3>🐍 Python for Data Science & AI</h3>
+                            <h3>🐍 Python for Data Science</h3>
                             <a href="https://www.credly.com/badges/4f0fcef8-75d4-4114-9ccc-20a10d21f494/public_url">Python for Data Science and AI</a>
                         </div>
                     </div>
