--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                     <header>
                         <h2><a href="https://github.com/danartech/BMI-Calculator_Python-Project">Python Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/BMI-Calculator_Python-Project" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="Python Projects" /></a>
-                    <p>Discover my Python projects showcasing data analysis and automation skills.</p>
+                    <a href="https://github.com/danartech/BMI-Calculator_Python-Project" class="image fit"><img src="images/bmipython.png" alt="Python Projects" /></a>
+                    <p>Explore my BMI Calculator project, a Python application that calculates and categorizes users' Body Mass Index (BMI) based on their weight and height, providing personalized health insights.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/BMI-Calculator_Python-Project" class="button">View Projects</a></li>
                     </ul>
