--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/danartech/BMI-Calculator_Python-Project">Python Projects</a></h2>
+                        <h2><a href="https://github.com/danartech/BMI-Calculator_Python-Project">BMI Calculator Python Projects</a></h2>
                     </header>
                     <a href="https://github.com/danartech/BMI-Calculator_Python-Project" class="image fit"><img src="images/bmipython.png" alt="Python Projects" /></a>
-                    <p>Explore my BMI Calculator project, a Python application that calculates and categorizes users' Body Mass Index (BMI) based on their weight and height, providing personalized health insights.</p>
+                    <p>Discover my BMI Calculator project, a Python app that calculates and categorizes BMI, offering personalized health insights.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/BMI-Calculator_Python-Project" class="button">View Projects</a></li>
                     </ul>
