--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <h2><a href="https://github.com/danartech/BMI-Calculator_Python-Project">Python BMI Calculator</a></h2>
                     </header>
                     <a href="https://github.com/danartech/BMI-Calculator_Python-Project" class="image fit"><img src="images/bmipython.png" alt="Python Projects" /></a>
-                    <p>Discover my BMI Calculator project, a Python app that calculates and categorizes BMI, offering personalized health insights.</p>
+                    <p>Discover my BMI Calculator, a Python project that calculates and categorizes BMI, offering personalized health insights.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/BMI-Calculator_Python-Project" class="button">View Projects</a></li>
                     </ul>
