--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
             <!-- Featured Post -->
             <article class="post featured">
                 <header class="major">
-                    <h2><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql">Data Cleaning in SQL</a></h2>
+                    <h2><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning">Data Cleaning in SQL</a></h2>
                     <p>Cleaned housing data using MySQL Server to ensure data accuracy and integrity.</p>
                 </header>
-                <a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="image main"><img src="images/pexels-pixabay-164338.jpg" alt="Data Cleaning" /></a>
+                <a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning" class="image main"><img src="images/pexels-pixabay-164338.jpg" alt="Data Cleaning" /></a>
                 <ul class="actions special">
-                    <li><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning/blob/main/Portfolio%20Project%20-%20Data%20Cleaning%20Dana.sql" class="button large">View Project</a></li>
+                    <li><a href="https://github.com/danartech/Portfolio-Project-Data-Cleaning" class="button large">View Project</a></li>
                 </ul>
             </article>
 
