--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="https://github.com/danartech">Python Projects</a></h2>
+                        <h2><a href="https://github.com/danartech/Python-Projects">Python Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="Python Projects" /></a>
+                    <a href="https://github.com/danartech/Python-Projects" class="image fit"><img src="images/pexels-divinetechygirl-1181359.jpg" alt="Python Projects" /></a>
                     <p>Discover my Python projects showcasing data analysis and automation skills.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/danartech" class="button">View Projects</a></li>
+                        <li><a href="https://github.com/danartech/Python-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
                 <article>
