--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
                         <li><a href="https://github.com/danartech/Power-BI-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
-                <!-- Excel Projects -->
                 <article>
                     <header>
                         <h2><a href="https://github.com/danartech/Excel-Projects">Excel Projects</a></h2>
                     </header>
-                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/microsoft-office-7040220_1280.png" alt="Excel Projects" /></a>
+                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/microsoft-office-7040220_1280.png?raw=true"" alt="Excel Projects" /></a>
                     <p>Explore my data analysis projects created using Microsoft Excel.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/danartech/Excel-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
+                 <article>
             </section>
 
             <!-- Skills and Certifications -->
